--- a/EXFINAL/src/css/style.css
+++ b/EXFINAL/src/css/style.css
@@ -142,3 +142,8 @@
     padding-right: 0px;
     background-color: #D9D9D9;
 }
+.footer{
+    background-color: #85AE51;
+    text-align: center;
+    padding: 50px;
+}
